# lzc-apps

./: .gitignore
docs-vector/: pyproject.toml
docs-vector/src/: main.py
lzc-adguard/: lzc-manifest.yml
lzc-bytebase/: lzc-manifest.yml
lzc-dagu/: lzc-manifest.yml
lzc-khoj/: lzc-manifest.yml
lzc-symphony/: lzc-manifest.yml
lzc-teable/: lzc-manifest.yml
lzc-tolgee/: lzc-manifest.yml
